# Smart-Extractor

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  local.example.yaml
config/schemas/: job_posting.yaml  news_article.yaml  product_detail.yaml
docs/: API文档.md  产品规划书_SmartExtractor.md  代码优化建议报告.md  用户手册.md
src/smart_extractor/: __init__.py  benchmark.py  cli.py  config.py  main.py  pipeline.py
src/smart_extractor/cleaner/: __init__.py  html_cleaner.py  structured_hints.py
src/smart_extractor/extractor/: __init__.py  base.py  field_normalizer.py  learned_profile_store.py  llm_analysis.py  llm_client.py  llm_client_async.py  llm_extractor.py  llm_fallbacks.py  llm_prompts.py  llm_response.py  llm_task_plan.py  rule_extractor.py  specialized_extractors.py
src/smart_extractor/fetcher/: __init__.py  base.py  playwright.py  playwright_async.py  static.py  url_preflight.py
src/smart_extractor/models/: __init__.py  base.py  custom.py  job.py  news.py  product.py
src/smart_extractor/scheduler/: __init__.py  task_manager.py
src/smart_extractor/security/: crypto.py
src/smart_extractor/storage/: __init__.py  base.py  csv_storage.py  json_storage.py  sqlite_storage.py
src/smart_extractor/tools/: __init__.py  manual_session.py
src/smart_extractor/utils/: anti_detect.py  display.py  encoding.py  logger.py  retry.py
src/smart_extractor/validator/: __init__.py  data_validator.py
src/smart_extractor/web/: actor_market.py  analysis_routes.py  api_models.py  app.py  auth.py  database.py  database_admin.py  exporters.py  failure_diagnosis.py  governance_store.py  management_actor_routes.py  management_annotation_routes.py  management_config_routes.py  management_funnel_routes.py  management_helpers.py  management_learned_profile_routes.py  management_monitor_routes.py  management_notification_routes.py  (+31 more)
tests/: conftest.py  test_async_clients.py  test_benchmark.py  test_cleaner.py  test_config.py  test_entrypoints.py  test_fetcher_playwright.py  test_fetcher_playwright_async.py  test_fetcher_security.py  test_fetcher_static_fallback.py  test_field_normalizer.py  test_integration.py  test_llm_client_usage.py  test_llm_extractor.py  test_manual_session.py  test_models.py  test_pipeline.py  test_pipeline_batch_workers.py  test_specialized_extractors.py  test_storage.py  test_structured_hints.py  test_url_preflight.py  test_utils.py  test_validator.py  test_validator_mojibake.py  test_web_actor_runtime_repair.py  test_web_analysis_routes.py  test_web_app_factory.py  test_web_exporters.py  test_web_growth_templates.py  test_web_management_routes.py  test_web_monitor_scheduler.py  test_web_notification_digest.py  test_web_notification_retry.py  test_web_notifier.py  test_web_p0_backend.py  test_web_queue_routes.py  test_web_redis_queue.py  test_web_routes.py  test_web_security.py  (+6 more)
(+11 files in other folders)
