[project]
name = "smart-extractor"
dynamic = ["version"]
description = "基于 LLM 的复杂网页数据智能提取与变化监控系统"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "etaci" }
]
keywords = ["llm", "web scraping", "data extraction", "monitoring", "playwright", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "instructor>=1.0",
    "openai>=1.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.0",
    "tenacity>=8.0",
    "typer>=0.12",
    "rich>=13.0",
    "loguru>=0.7",
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[project.urls]
Homepage = "https://github.com/etaci/Smart-Extractor"
Repository = "https://github.com/etaci/Smart-Extractor"
Issues = "https://github.com/etaci/Smart-Extractor/issues"

[project.scripts]
smart-extractor = "smart_extractor.cli:app"
smart-extractor-session = "smart_extractor.tools.manual_session:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/smart_extractor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_extractor"]
